hero section added with content and animation for floating icons

--- a/input.css
+++ b/input.css
@@ -14,3 +14,29 @@ body {
 .nav-link:hover {
   @apply text-yellow-500;
 }
+
+section {
+  @apply py-20 md:py-28;
+}
+
+h1 {
+  @apply text-3xl md:text-4xl lg:text-5xl font-bold;
+}
+
+/* button */
+
+.btn {
+  @apply border border-yellow-500 bg-yellow-500 rounded-md px-5 py-2;
+}
+
+.btn_outline {
+  @apply bg-transparent duration-300;
+}
+
+.btn:hover {
+  @apply opacity-90;
+}
+
+.btn_outline:hover {
+  @apply bg-yellow-500;
+}
