--- a/input.css
+++ b/input.css
@@ -23,6 +23,16 @@ h1 {
   @apply text-3xl md:text-4xl lg:text-5xl font-bold;
 }
 
+h2 {
+  @apply text-2xl md:text-3xl lg:text-4xl;
+}
+h3 {
+  @apply text-xl md:text-2xl lg:text-3xl;
+}
+.title {
+  @apply font-lobster text-yellow-500;
+}
+
 /* button */
 
 .btn {
