--- a/style.css
+++ b/style.css
@@ -673,12 +673,20 @@ video {
   right: -2.5rem;
 }
 
+.-right-12{
+  right: -3rem;
+}
+
 .-top-10{
   top: -2.5rem;
 }
 
 .-top-5{
   top: -1.25rem;
+}
+
+.-top-6{
+  top: -1.5rem;
 }
 
 .bottom-0{
@@ -719,14 +727,6 @@ video {
 
 .top-1\/2{
   top: 50%;
-}
-
-.-right-12{
-  right: -3rem;
-}
-
-.-top-6{
-  top: -1.5rem;
 }
 
 .isolate{
@@ -796,6 +796,10 @@ video {
 
 .mb-10{
   margin-bottom: 2.5rem;
+}
+
+.mb-40{
+  margin-bottom: 10rem;
 }
 
 .mt-2{
@@ -917,6 +921,14 @@ video {
   width: 8rem;
 }
 
+.w-40{
+  width: 10rem;
+}
+
+.w-56{
+  width: 14rem;
+}
+
 .w-64{
   width: 16rem;
 }
@@ -935,14 +947,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-1\/2{
-  width: 50%;
-}
-
-.w-40{
-  width: 10rem;
 }
 
 .max-w-2xl{
@@ -1548,16 +1552,23 @@ video {
   gap: 2rem;
 }
 
+.gap-16{
+  gap: 4rem;
+}
+
+.gap-x-8{
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+
+.gap-y-36{
+  row-gap: 9rem;
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
 .space-y-10 > :not([hidden]) ~ :not([hidden]){
@@ -1566,10 +1577,10 @@ video {
   margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
 }
 
-.space-y-8 > :not([hidden]) ~ :not([hidden]){
+.space-y-5 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
-  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
 .space-y-reverse > :not([hidden]) ~ :not([hidden]){
@@ -1890,6 +1901,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
 .rounded-b{
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -2029,6 +2044,16 @@ video {
   background-color: rgb(21 128 61 / var(--tw-bg-opacity, 1));
 }
 
+.bg-green-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 83 45 / var(--tw-bg-opacity, 1));
+}
+
+.bg-green-950{
+  --tw-bg-opacity: 1;
+  background-color: rgb(5 46 22 / var(--tw-bg-opacity, 1));
+}
+
 .bg-green-950\/80{
   background-color: rgb(5 46 22 / 0.8);
 }
@@ -2036,6 +2061,11 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-yellow-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1));
 }
 
 .decoration-slice{
@@ -2148,6 +2178,10 @@ video {
      object-fit: scale-down;
 }
 
+.p-10{
+  padding: 2.5rem;
+}
+
 .p-5{
   padding: 1.25rem;
 }
@@ -2162,14 +2196,38 @@ video {
   padding-right: 0.375rem;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
 
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .py-20{
   padding-top: 5rem;
   padding-bottom: 5rem;
+}
+
+.py-24{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.pt-24{
+  padding-top: 6rem;
 }
 
 .text-left{
@@ -2245,6 +2303,11 @@ video {
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-xl{
@@ -2684,6 +2747,10 @@ video {
   transition-duration: 300ms;
 }
 
+.duration-500{
+  transition-duration: 500ms;
+}
+
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
@@ -2872,6 +2939,10 @@ h3{
   background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1));
 }
 
+.popular_card:hover img{
+  top: -2rem;
+}
+
 @media (min-width: 340px){
   .sm\:container{
     width: 100%;
@@ -2977,6 +3048,10 @@ h3{
 }
 
 @media (min-width: 540px){
+  .md\:mb-28{
+    margin-bottom: 7rem;
+  }
+
   .md\:w-52{
     width: 13rem;
   }
@@ -3032,6 +3107,14 @@ h3{
 
   .lg\:w-full{
     width: 100%;
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
