--- a/input.css
+++ b/input.css
@@ -54,3 +54,9 @@ h3 {
 .popular_card:hover img {
   @apply -top-8;
 }
+
+/* Swiper pagination bullet */
+
+.swiper-pagination-bullet {
+  @apply bg-green-500 w-3 h-3;
+}
