--- a/style.css
+++ b/style.css
@@ -729,6 +729,14 @@ video {
   top: 50%;
 }
 
+.-top-0{
+  top: -0px;
+}
+
+.-left-12{
+  left: -3rem;
+}
+
 .isolate{
   isolation: isolate;
 }
@@ -802,8 +810,20 @@ video {
   margin-bottom: 10rem;
 }
 
+.ml-2{
+  margin-left: 0.5rem;
+}
+
+.ml-auto{
+  margin-left: auto;
+}
+
 .mt-2{
   margin-top: 0.5rem;
+}
+
+.mb-20{
+  margin-bottom: 5rem;
 }
 
 .box-border{
@@ -905,6 +925,10 @@ video {
   display: none;
 }
 
+.h-12{
+  height: 3rem;
+}
+
 .h-16{
   height: 4rem;
 }
@@ -915,6 +939,10 @@ video {
 
 .min-h-\[100vh\]{
   min-height: 100vh;
+}
+
+.w-12{
+  width: 3rem;
 }
 
 .w-32{
@@ -947,6 +975,14 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-52{
+  width: 13rem;
+}
+
+.w-48{
+  width: 12rem;
 }
 
 .max-w-2xl{
@@ -1550,10 +1586,6 @@ video {
 
 .gap-8{
   gap: 2rem;
-}
-
-.gap-16{
-  gap: 4rem;
 }
 
 .gap-x-8{
@@ -2186,6 +2218,10 @@ video {
   padding: 1.25rem;
 }
 
+.p-6{
+  padding: 1.5rem;
+}
+
 .px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -2206,6 +2242,11 @@ video {
   padding-right: 1.25rem;
 }
 
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2214,11 +2255,6 @@ video {
 .py-20{
   padding-top: 5rem;
   padding-bottom: 5rem;
-}
-
-.py-24{
-  padding-top: 6rem;
-  padding-bottom: 6rem;
 }
 
 .py-3{
@@ -2293,6 +2329,11 @@ video {
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-6xl{
@@ -2943,6 +2984,15 @@ h3{
   top: -2rem;
 }
 
+/* Swiper pagination bullet */
+
+.swiper-pagination-bullet{
+  height: 0.75rem;
+  width: 0.75rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
+}
+
 @media (min-width: 340px){
   .sm\:container{
     width: 100%;
@@ -3107,10 +3157,6 @@ h3{
 
   .lg\:w-full{
     width: 100%;
-  }
-
-  .lg\:grid-cols-4{
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-2{
