--- a/style.css
+++ b/style.css
@@ -826,6 +826,14 @@ video {
   margin-top: 0.5rem;
 }
 
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
+}
+
 .box-border{
   box-sizing: border-box;
 }
@@ -2395,6 +2403,11 @@ video {
   line-height: 1.5rem;
 }
 
+.text-7xl{
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -2501,6 +2514,11 @@ video {
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
 }
 
+.text-green-700{
+  --tw-text-opacity: 1;
+  color: rgb(21 128 61 / var(--tw-text-opacity, 1));
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -2557,6 +2575,10 @@ video {
 
 .opacity-50{
   opacity: 0.5;
+}
+
+.opacity-20{
+  opacity: 0.2;
 }
 
 .bg-blend-normal{
@@ -3191,6 +3213,10 @@ h3{
     padding-top: 7rem;
   }
 
+  .md\:text-start{
+    text-align: start;
+  }
+
   .md\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -3234,6 +3260,10 @@ h3{
 
   .lg\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
