--- a/input.css
+++ b/input.css
@@ -19,6 +19,10 @@ body {
   @apply text-yellow-500;
 }
 
+.active {
+  @apply text-yellow-500;
+}
+
 section {
   @apply py-20 md:py-28;
 }
@@ -56,10 +60,10 @@ h3 {
 }
 
 .popular_card:hover img {
-  @apply -top-8 animate-bounce;
+  @apply -top-8;
 }
 
-/* Swiper pagination bullet */
+/* Swiper paginatio n bullet */
 
 .swiper-pagination-bullet {
   @apply bg-green-500 w-3 h-3;
